--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* @import url("https://fonts.googleapis.com/css?family=Poppins"); */
+/* *{
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+}
+.container{
+  width: 100vw;
+  min-height: 100vh;
 }
 
-code {
+html{
+  font-size: 10px;
+} */
+
+body{
+  background-color: #f9f9f9;
+  /* background-color: #FFFFFF; */
+  background: rgb(255,255,255); 
+  /* height: 100vh; */
+  width: 100%;
+  color: #000;
+  font-family: "Poppins", sans-serif;
+  /* justify-content: center; */
+  /* align-items: center; */
+  min-height: 100vh;
+  
+}
+
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
+
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
